Minesweeper repository directory

--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://pieters-program.github.io/minesweeper/'"
+                onclick="location.href='https://pieters-program.github.io/Minesweeper/'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://pieters-program.github.io/minesweeper/'"
+                onclick="location.href='https://pieters-program.github.io/Minesweeper/'"
               >
                 Live Demo
               </button>
