profile picture update

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Business Administration and Technology Management<br />M.Sc. Sustainable Tourism <br /> Udemy Web Developer Bootcamp 2023</p>
+              <p>B.Sc. Business and Technology Management<br />M.Sc. Sustainable Tourism <br /> Udemy Web Developer Bootcamp 2023</p>
             </div>
           </div>
         </div>
