--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                 <p>
                     Hello! I’m a recent graduate with a newfound love for web development. 
                     Passionate about creating user-friendly web applications. Eager
-                    to contribute my skills to and learn from innovative projects. Let’s connect!
+                    to contribute my skills to innovative projects. Dedicated
+                    to learn fas. Let’s connect!
                 </p>
               </div>
               <div class="about-containers">
