--- a/index.html
+++ b/index.html
@@ -244,31 +244,31 @@
               </button>
             </div>
           </div>
-          <!-- <div class="details-container color-container">
+          <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/calculator.png"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Refugee Bicycle Club webpage</h2>
+            <h2 class="experience-sub-title project-title">JavaScript calculator</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Pieters-Program/Calculator'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://pieters-program.github.io/Calculator/'"
               >
                 Live Demo
               </button>
             </div>
           </div>
-          <div class="details-container color-container">
+          <!-- <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/project-3.png"
@@ -293,7 +293,7 @@
             </div>
           </div>
         </div>
-      </div> --!>
+      </div> --> 
       <img
         src="./assets/arrow.png"
         alt="Arrow icon"
@@ -339,3 +339,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
