--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     Hello! I’m a recent graduate with a newfound love for web development. 
                     Passionate about creating user-friendly web applications. Eager
                     to contribute my skills to innovative projects. Dedicated
-                    to learn fas. Let’s connect!
+                    to learn fast. Let’s connect!
                 </p>
               </div>
               <div class="about-containers">
