--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <h2 class="experience-sub-title project-title">2048</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://pieters-program.github.io/2048/'">
+              onclick="location.href='https://github.com/Pieters-Program/2048'">
               Github
             </button>
             <button class="btn btn-color-2 project-btn"
@@ -224,7 +224,7 @@
           <h2 class="experience-sub-title project-title">Score Keeper</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://pieters-program.github.io/scorekeeper/'">
+              onclick="location.href='https://github.com/Pieters-Program/scorekeeper'">
               Github
             </button>
             <button class="btn btn-color-2 project-btn"
